--- a/vignettes/ordPens.Rmd
+++ b/vignettes/ordPens.Rmd
@@ -407,13 +407,13 @@ lines(sort(unique(dose)), mu_sq2 * a[4], lty = 1, col = 1)
 Alternatively, we can plot dose levels (on ordinal scale) against expression values: 
 ```{r genes2, figures-side, fig.show="hold", fig.width = 5, fig.height = 5, out.width="45%",out.height="50%"}
 plot(1:length(sort(unique(dose))), ylim = range(xpr[4,]), pch = "", ylab = "expression", 
-     xlab = "levels", xaxt = "n")
+     main = "gene 4", xlab = "levels", xaxt = "n")
 axis(1, at = 1:length(sort(unique(dose))) ) 
 points(as.factor(dose), xpr[4,], col = as.factor(dose), lwd = 2) 
 lines(1:length(sort(unique(dose))), mu_lin * a[4], lty = 1)
 
 plot(1:length(sort(unique(dose))), ylim = range(xpr[14,]), pch = "", ylab = "expression", 
-     xlab = "levels", xaxt = "n")
+     main = "gene 14", xlab = "levels", xaxt = "n")
 axis(1, at = 1:length(sort(unique(dose))) ) 
 points(as.factor(dose), xpr[14,], col = as.factor(dose), lwd = 2) 
 lines(1:length(sort(unique(dose))), mu_sq2 * a[4], lty = 1)
