--- a/README.Rmd
+++ b/README.Rmd
@@ -27,6 +27,15 @@ All functions are documented in detail in `vignette("ordPens", package = "ordPen
 
 For the function implementing nonlinear principal components analysis, `ordPCA`, details can be found in Hoshiyar et al. (2021) and `vignette("ordPCA", package = "ordPens")`.
 
+Version 1.1.0 is a minor release with new functions:
+
+* Functions `ordSelect`, `ordFusion` updated/extended to cumulative
+    logit model models
+*  Function `ordCV` added, provides cross-validation for penalized
+    regression models with ordinal predictors  
+*   Function `StabilityCumu` added, provides stability selection for
+    penalized cumulative logit models
+
 
 Version 1.0.0 is a major release with new functions:
 
@@ -35,6 +44,37 @@ Also, performance evaluation and selection of an optimal penalty parameter provi
 * `ordFusion` fits dummy coefficients of ordinally scaled independent variables with a fused lasso penalty for fusion and selection.
 * A new type of spline basis for ordered factors `s(..., bs = "ordinal")`is provided, such that smooth terms in the `mgcv::gam()` formula can be used as an alternative and extension to `ordSmooth()`. Additionally, generic functions for prediction and plotting are provided.  
  
+## Installation & getting started
+
+For standard use, install `ordPens` from [CRAN](https://cran.r-project.org/package=ordPens):
+```{r CRAN-install, eval=FALSE}
+install.packages("ordPens")
+```
+
+The development version of the package may be installed from GitHub:
+```{r git-install, eval=FALSE} 
+devtools::install_git("https://github.com/ahoshiyar/ordPens", build_vignettes = TRUE)
+```
+
+For a detailed overview about the functionalities and given examples type:
+```{r vignettes, eval=FALSE} 
+library(ordPens)
+vignette("ordPens", package = "ordPens")
+vignette("ordPCA", package = "ordPens")
+```
+
+## Issues
+
+If you encounter any bugs or have any specific feature requests, please [file an issue](https://github.com/ahoshiyar/ordPens/issues).
+
+## Contributions & Code of conduct 
+
+Contributions are very welcome. Interested contributors should consult the
+[contribution
+guidelines](https://github.com/ahoshiyar/ordPens/blob/master/Contributing.md)
+prior to submitting a pull request.
+  
+Please note that the `ordPens` package is released with a [Contributor Code of Conduct](https://www.contributor-covenant.org/version/2/0/code_of_conduct/). By contributing to this project, you agree to abide by its terms.
 
 ## References
 
@@ -42,7 +82,7 @@ Also, performance evaluation and selection of an optimal penalty parameter provi
 
 * Gertheiss, J., F. Scheipl, T. Lauer, and H. Ehrhardt (2021). Statistical inference for ordinal predictors in generalized linear and additive models with application to bronchopulmonary dysplasia. Preprint, available from https://arxiv.org/abs/2102.01946.
 
-* Hoshiyar, A., H.A.L. Kiers, and J. Gertheiss (2021). Penalized non-linear principal components analysis for ordinal variables with an application to international classification of functioning core sets, Preprint.
+* Hoshiyar, A., H.A.L. Kiers, and J. Gertheiss (2021). Penalized non-linear principal components analysis for ordinal variables with an application to international classification of functioning core sets. *British Journal of Mathematical and Statistical Psychology 76*, 353-371.
 
 * Sweeney, E., C. Crainiceanu, and J. Gertheiss (2015). Testing differentially expressed genes in dose-response studies and with ordinal phenotypes. *Statistical Applications in Genetics and Molecular Biology 15*, 213-235.
 
