--- a/NEWS.Rmd
+++ b/NEWS.Rmd
@@ -11,7 +11,8 @@ knitr::opts_chunk$set(echo = TRUE)
 Minor revision with added functionality. 
 
 -   Functions `ordSelect`, `ordFusion` updated/extended to cumulative logit model models
--   Function `CVcumu`  added, provides cross-validation for penalized cumulative logit models
+-   Function `ordCV`  added,  provides cross-validation for penalized
+    regression models with ordinal predictors  
 -   Function `StabilityCumu` added, provides stability selection for penalized cumulative logit models
 
 
