update: new functions, cumulative logit model

--- a/NEWS.Rmd
+++ b/NEWS.Rmd
@@ -10,10 +10,10 @@ knitr::opts_chunk$set(echo = TRUE)
 # ordPens 1.1.0
 Minor revision with added functionality. 
 
--   Functions `ordSelect`, `ordFusion` updated/extended to cumulative logit model models
+-   Functions `ordSelect`, `ordFusion` updated/extended to cumulative logit model models.
 -   Function `ordCV`  added,  provides cross-validation for penalized
-    regression models with ordinal predictors  
--   Function `StabilityCumu` added, provides stability selection for penalized cumulative logit models
+    regression models with ordinal predictors.  
+-   Function `StabilityCumu` added, provides stability selection for penalized cumulative logit models.
 
 
 # ordPens 1.0.0
